--- a/templates/languages_and_tools.html
+++ b/templates/languages_and_tools.html
@@ -1,4 +1,5 @@
 {% load static %}
+
 <div class="row mt-5">
     <div class="col-lg-12">
         <h1 class="display-4 title mb-0" id="competences">
@@ -14,9 +15,10 @@
                             {% if competence.image %}
                                 <img class="competence-img" alt="{{competence.title}} logo" src="{{ competence.image.url }}">
                             {% else %}
-                                <img class="competence-img" alt="{{competence.title}} logo" src="{% static 'fixed_media/coding-logo.jpg' %}">
+                                <img class="competence-img" alt="{{competence.title}} logo" src="{% static 'fixed_media/coding_logo.jpg' %}">
                             {% endif %}
-                        <p class="font-weight-normal pt-2 mb-0">{{competence.title}}</p>
+
+                            <p class="font-weight-normal pt-2 mb-0">{{competence.title}}</p>
                         </div>
                     </div>
             </div>
