--- a/templates/projects.html
+++ b/templates/projects.html
@@ -17,7 +17,7 @@
 
                                         <div class="blog-slider__item swiper-slide">
                                             <div class="blog-slider__img">
-                                                <img src="{{project.image.url}}" alt="">
+                                                <img class="project-img" alt="{{project.title}} logo" src="{% static 'img/home.svg' %}">
                                             </div>
                                             <div class="blog-slider__content">
                                                 <div class="blog-slider__title">{{project.title|truncatechars:25}}</div>
