--- a/templates/languages_and_tools.html
+++ b/templates/languages_and_tools.html
@@ -12,7 +12,7 @@
             <div class="col-lg-2 col-sm-6 justify-content-center mt-3" data-toggle="modal" data-target=".competance-model-{{competence.id}}">
                     <div class="competence-card text-center mirror-face">
                         <div class="card-body">
-                            <img class="competence-img" alt="{{competence.title}} logo" src="{% static 'img/page-not-found.png' %}">
+                            <img class="competence-img" alt="{{competence.title}} logo" src="{% static 'img/coding-logo.jpg' %}">
                             <p class="font-weight-normal pt-2 mb-0">{{competence.title}}</p>
                         </div>
                     </div>
