--- a/templates/projects.html
+++ b/templates/projects.html
@@ -17,7 +17,15 @@
 
                                         <div class="blog-slider__item swiper-slide">
                                             <div class="blog-slider__img">
-                                                <img class="project-img" alt="{{project.title}} logo" src="{% static 'img/home.svg' %}">
+                                                {% if forloop.counter == 1 %}
+                                                    <img src="{% static 'img/portfolioz-img.png' %}" alt="">
+                                                {% elif forloop.counter == 2 %}
+                                                    <img src="{% static 'img/heartbitz-img.jpg' %}" alt="">
+                                                {% elif forloop.counter == 3 %}
+                                                    <img src="{% static 'img/heartbitz-img.jpg' %}" alt="">
+                                                {% else %}
+                                                    <img src="{% static 'img/home.svg' %}" alt="">
+                                                {% endif %}
                                             </div>
                                             <div class="blog-slider__content">
                                                 <div class="blog-slider__title">{{project.title|truncatechars:25}}</div>
