--- a/templates/about_and_contact.html
+++ b/templates/about_and_contact.html
@@ -15,6 +15,19 @@
                     <i class="fa fa-envelope"></i>
                     <a class="" href="mailto:{{info.email}}">{{info.email}}</a>
                 </p>
+
+                <div class="resume-buttons mt-3">
+                    <!-- View Resume -->
+                    <a href="{% static 'resume.pdf' %}" target="_blank" class="btn btn-primary mr-2">
+                        <i class="fas fa-file-pdf"></i> View Resume
+                    </a>
+
+                    <!-- Download Resume -->
+                    <a href="{% static 'resume.pdf' %}" download class="btn btn-success">
+                        <i class="fas fa-download"></i> Download Resume
+                    </a>
+                </div>
+
                 <div class="social text-center">
                     <a href="{{info.github}}" target="_blank">
                         <i class="fab fa-github"></i>
