--- a/templates/projects/projects_page.html
+++ b/templates/projects/projects_page.html
@@ -34,7 +34,7 @@
                                     {% if forloop.counter == 1 %}
                                         <img src="{% static 'img/portfolioz-img.png' %}" alt="">
                                     {% elif forloop.counter == 2 %}
-                                        <img src="{% static 'img/heartbitz-img.jpg' %}" alt="">
+                                        <img src="{% static 'img/featherscan-img.png' %}" alt="">
                                     {% elif forloop.counter == 3 %}
                                         <img src="{% static 'img/heartbitz-img.jpg' %}" alt="">
                                     {% else %}
