--- a/templates/about_and_contact.html
+++ b/templates/about_and_contact.html
@@ -18,12 +18,12 @@
 
                 <div class="resume-buttons mt-3">
                     <!-- View Resume -->
-                    <a href="{% static 'resume.pdf' %}" target="_blank" class="btn btn-primary mr-2">
+                    <a href="https://drive.google.com/file/d/1VMMnwlZMXPviZiE2HlqJZKSRfcDCOaO1/view" target="_blank" class="btn btn-primary mr-2">
                         <i class="fas fa-file-pdf"></i> View Resume
                     </a>
 
                     <!-- Download Resume -->
-                    <a href="{% static 'resume.pdf' %}" download class="btn btn-success">
+                    <a href="https://drive.google.com/uc?export=download&id=1VMMnwlZMXPviZiE2HlqJZKSRfcDCOaO1" download class="btn btn-success">
                         <i class="fas fa-download"></i> Download Resume
                     </a>
                 </div>
