--- a/templates/projects.html
+++ b/templates/projects.html
@@ -18,7 +18,7 @@
                                         <div class="blog-slider__item swiper-slide">
                                             <div class="blog-slider__img">
                                                 {% if forloop.counter == 1 %}
-                                                    <img src="{% static 'img/portfolioz-img.png' %}" alt="">
+                                                    <img src="{% static 'img/featherscan-img.png' %}" alt="">
                                                 {% elif forloop.counter == 2 %}
                                                     <img src="{% static 'img/heartbitz-img.jpg' %}" alt="">
                                                 {% elif forloop.counter == 3 %}
